udpdating package.json with node version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "webserver",
   "version": "1.0.0",
+  "engines": {
+    "node": "v15.x"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
