--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "postman-request": "*"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
